# AFLplusplus

./: .gitignore  .gitmodules  GNUmakefile  README.md
include/: forkserver.h
src/: afl-forkserver.c  afl-fuzz-init.c  afl-fuzz.c
vp_mode/: AVP64_VERSION  Makefile  README.md  build_vp_support.sh
vp_mode/example_target/: Makefile  arch_pro.cfg  boot.S  link.ld  main.c
vp_mode/example_target/seeds/: seed_0  seed_1  seed_2  seed_3
vp_mode/harness/: CMakeLists.txt  settings.bash  test_client.cpp
vp_mode/harness/include/: afl_client.h  defines.h  logger.h  vp_client.h
vp_mode/harness/src/: afl_client.cpp  logger.cpp  main.cpp  vp_client.cpp
